ColorPickerView Sample Added.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 AndroidSlidingDrawer/AnimationDrawer/bin
 AndroidSlidingDrawer/AnimationDrawer/obj
+ColorPickerView/ColorPicker/obj
+ColorPickerView/ColorPicker/bin
+ColorPickerView/ColorPickerViewDemo/bin
+ColorPickerView/ColorPickerViewDemo/obj
