--- a/ColorPickerView/ColorPickerViewDemo/ColorPickerViewDemo.csproj
+++ b/ColorPickerView/ColorPickerViewDemo/ColorPickerViewDemo.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ColorPickerActivity.cs" />
+    <Compile Include="MainActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
