Adding Pinned section

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ ColorPickerView/ColorPicker/obj
 ColorPickerView/ColorPicker/bin
 ColorPickerView/ColorPickerViewDemo/bin
 ColorPickerView/ColorPickerViewDemo/obj
+PinnedSection.userprefs
+PinnedSection/PinnedSectionActivity/bin
+PinnedSection/PinnedSectionActivity/obj
