--- a/PinnedSection/PinnedSectionSample/PinnedSectionSample.csproj
+++ b/PinnedSection/PinnedSectionSample/PinnedSectionSample.csproj
@@ -6,16 +6,16 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{DF06D9A4-DA34-4960-BE18-00AA7EA5DCEF}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>PinnedSectionActivity</RootNamespace>
+    <RootNamespace>PinnedSectionSample</RootNamespace>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <AndroidResgenClass>Resource</AndroidResgenClass>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidApplication>True</AndroidApplication>
-    <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
+    <AndroidUseLatestPlatformSdk>False</AndroidUseLatestPlatformSdk>
     <AssemblyName>PinnedSectionActivity</AssemblyName>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
-    <TargetFrameworkVersion>v4.4</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.1</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -47,7 +47,6 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PinnedSectionListView.cs" />
     <Compile Include="TestActiivty.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -63,4 +62,10 @@
     <AndroidResource Include="Resources\values\colors.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\PinnedSectionLibrary\PinnedSectionLibrary.csproj">
+      <Project>{0FFD1976-497B-4FE1-BD33-94A31CA134FF}</Project>
+      <Name>PinnedSectionLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
