Added the main layouts and fix view not loading issue

--- a/ColorPickerView/ColorPickerViewDemo/ColorPickerViewDemo.csproj
+++ b/ColorPickerView/ColorPickerViewDemo/ColorPickerViewDemo.csproj
@@ -64,10 +64,12 @@
     <AndroidResource Include="Resources\drawable\ic_menu_color_palette.png" />
     <AndroidResource Include="Resources\menu\main.xml" />
     <AndroidResource Include="Resources\values\styles.xml" />
+    <AndroidResource Include="Resources\xml\main.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
     <Folder Include="Resources\menu\" />
+    <Folder Include="Resources\xml\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ColorPicker\ColorPicker.csproj">
