Bug fixs. Android Version 2.1 support in PinnedSectionListview.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ ColorPickerView/ColorPickerViewDemo/obj
 PinnedSection.userprefs
 PinnedSection/PinnedSectionActivity/bin
 PinnedSection/PinnedSectionActivity/obj
+PinnedSection/PinnedSectionLibrary/bin
+PinnedSection/PinnedSectionLibrary/obj
+PinnedSection/PinnedSectionSample/bin
+PinnedSection/PinnedSectionSample/obj
