rename project name.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ PinnedSection/PinnedSectionSample/bin
 PinnedSection/PinnedSectionSample/obj
 SampleDrawerArrowDrawable/SampleDrawerArrowDrawable/obj
 SampleDrawerArrowDrawable/SampleDrawerArrowDrawable/bin
+DrawerArrowDrawable/DrawerArrowDrawable/obj
+DrawerArrowDrawable/DrawerArrowDrawable/bin
