--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ SampleDrawerArrowDrawable/SampleDrawerArrowDrawable/obj
 SampleDrawerArrowDrawable/SampleDrawerArrowDrawable/bin
 DrawerArrowDrawable/DrawerArrowDrawable/obj
 DrawerArrowDrawable/DrawerArrowDrawable/bin
+ProcessButton/Library/bin
+ProcessButton/Library/obj
+ProcessButton/ProcessButton/bin
+ProcessButton/ProcessButton/obj
