CropImage sample added.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ ProcessButton/Library/bin
 ProcessButton/Library/obj
 ProcessButton/ProcessButton/bin
 ProcessButton/ProcessButton/obj
+CropImageSample/CropImageSample/obj
+CropImageSample/CropImageSample/bin
