--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ ProcessButton/ProcessButton/bin
 ProcessButton/ProcessButton/obj
 CropImageSample/CropImageSample/obj
 CropImageSample/CropImageSample/bin
+Chart/Chart/bin
+Chart/Chart/obj
+Chart/Holo/obj
+Chart/HoloGraphLibrary/obj
+Chart/HoloGraphLibrary/bin
