Carousel view added.

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ Chart/Chart/obj
 Chart/Holo/obj
 Chart/HoloGraphLibrary/obj
 Chart/HoloGraphLibrary/bin
+CarouselViewProject-master/CarouselViewProject-master/obj
+CarouselViewProject-master/CarouselViewProject-master/bin
