--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ Chart/HoloGraphLibrary/obj
 Chart/HoloGraphLibrary/bin
 CarouselViewProject-master/CarouselViewProject-master/obj
 CarouselViewProject-master/CarouselViewProject-master/bin
+ScaleImage/ScaleImage/obj
+ScaleImage/ScaleImage/bin
